projetos/oke/superset/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: superset
  labels:
    app: superset
    environment: production
