projetos/oke/superset/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: superset-route
  namespace: superset
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "superset.tech.nexusplatform.com.br"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "132.226.245.136"
spec:
  parentRefs:
  - name: nexus-gateway
    namespace: nginx-gateway
    sectionName: tech-https
  hostnames:
  - "superset.tech.nexusplatform.com.br"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    timeouts:
      request: 300s
      backendRequest: 300s
    backendRefs:
    - name: superset
      port: 8088
